@@ -25,7 +25,6 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static de.rwth.idsg.steve.utils.StringUtils.splitByComma;
@@ -46,6 +45,6 @@ public class GetConfigurationParams extends MultipleChargePointSelect {
         List<String> fromPredefined = Objects.requireNonNullElse(confKeyList, Collections.emptyList());
         List<String> fromCustom = splitByComma(commaSeparatedCustomConfKeys);
 
-        return Stream.of(fromPredefined, fromCustom).flatMap(Collection::stream).collect(Collectors.toList());
+        return Stream.of(fromPredefined, fromCustom).flatMap(Collection::stream).toList();
     }
 }
